@@ -9,6 +9,7 @@ git clone git://github.com/Islandora/tuque.git
 git clone -b $FEDORA_VERSION git://github.com/Islandora/islandora_tomcat.git
 cd islandora_tomcat
 export CATALINA_HOME='.'
+export JAVA_OPTS="-Xms1024m -Xmx1024m -XX:MaxPermSize=512m -XX:+CMSClassUnloadingEnabled -Djavax.net.ssl.trustStore=$CATALINA_HOME/fedora/server/truststore -Djavax.net.ssl.trustStorePassword=tomcat"
 ./bin/startup.sh
 cd $HOME
 pear upgrade --force Console_Getopt
@@ -20,11 +21,11 @@ pear channel-discover pear.phpqatools.org
 pear channel-discover pear.netpirates.net
 pear install pear/PHP_CodeSniffer
 pear install pear.phpunit.de/phpcpd
-pear install drush/drush
+pear install drush/drush-5.9.0
 phpenv rehash
 drush dl --yes drupal
 cd drupal-*
-drush si standard --db-url=mysql://drupal:drupal@localhost/drupal --yes
+drush si minimal --db-url=mysql://drupal:drupal@localhost/drupal --yes
 drush runserver --php-cgi=$HOME/.phpenv/shims/php-cgi localhost:8081 &>/dev/null &
 ln -s $ISLANDORA_DIR sites/all/modules/islandora
 mv sites/all/modules/islandora/tests/travis.test_config.ini sites/all/modules/islandora/tests/test_config.ini
